--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   device_preview: ^1.1.0
   flutter:
     sdk: flutter
+  url_launcher: ^6.0.9
+  webview_flutter: ^2.0.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
