--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,17 @@ dependencies:
   flutter:
     sdk: flutter
   url_launcher: ^6.1.11
-  webview_flutter: ^2.0.8
-  flutter_hooks: ^0.18.0
+  webview_flutter: ^4.7.0
+  flutter_hooks: ^0.20.5
+  firebase_core: ^2.27.1
+  firebase_auth:
+  google_sign_in: ^5.2.1
+  firebase_database: ^10.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^2.0.0
+  google_fonts: ^6.2.0
   cached_network_image: ^3.1.0
 
 dev_dependencies:
